kubernetes/clusters/atlantis-k8s01/apps/downloaders/default-egress-policy.yaml
---
# Default egress policy for downloaders namespace.
# Blocks access to internal/cluster networks but allows public internet.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-egress
spec:
  # Apply to all pods in the namespace
  endpointSelector: {}
  egress:
    # Allow public internet (IPv4)
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
    # Allow public internet (IPv6)
    - toCIDRSet:
        - cidr: "::/0"
          except:
            - "fc00::/7"   # Unique local addresses
            - "fe80::/10"  # Link-local addresses
